# siz_manager

./: .dockerignore  .env.prod  .gitignore  DEPLOYMENT.md  Dockerfile  Guide.txt  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx-prod.conf  pyproject.toml
backups/: backup_db.sh
manager/: check_employee.py
manager (copy)/core/: admin.py  forms.py  models.py  urls.py  views.py
manager (copy)/core/migrations/: 0001_initial.py
manager (copy)/core/templatetags/: user_filters.py
manager (copy)/manager/: settings.py
manager (copy)/static/css/: custom.css
manager (copy)/templates/core/: create_employee.html  create_norm.html  create_position.html  edit_issues.html  employee_detail.html  expiring_issues.html  index.html
manager (copy)/templates/includes/: footer.html  header.html
manager (copy)/templates/users/: login.html  password_change_done.html  password_reset_confirm.html  password_reset_done.html
manager (copy)/users/: forms.py  urls.py  views.py
manager (copy)/users/migrations/: 0001_initial.py
manager/core/: 111  222  admin.py  forms.py  forms_.py  models copy.py  models.py  models_.py  urls.py  urls_.py  views copy.py  views.py  views_.py
manager/core/migrations/: 0001_initial.py  0002_alter_employee_id_alter_issue_id_alter_item_id_and_more.py  0002_alter_issue_item_alter_item_ppe_type_and_more.py  0002_auto_20250410_0933.py  (+17 more)
manager/manager/: settings.py  urls.py
manager/templates/: base.html
manager/users/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
nginx/: default.conf
(+53 files in other folders)
