[tool.poetry]
name = "siz-manager"
version = "0.1.0"
description = ""
authors = ["bearvar <a.a.malev.und@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0.post0"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
