[tool.poetry]
name = "siz-manager"
version = "0.1.0"
description = ""
authors = ["bearvar <a.a.malev.und@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0.post0"
openpyxl = "^3.1.3"
pandas = "^2.2.3"
xlrd = "^2.0.1"
html5lib = "^1.1"
lxml = "^5.3.1"
beautifulsoup4 = "^4.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
